--- a/style.css
+++ b/style.css
@@ -1,23 +1,8 @@
 /*
-
-
-
 Theme Name: ETEC Custom
-
-
-
 Description: Custom theme based on Avada Theme
-
-
-
 Author: Boondock Marketing
-
-
-
 Template: Avada
-
-
-
 */
 
 
@@ -389,3 +374,11 @@ text-decoration:none !important;
 }
 
 .tm_lcptu_post_title a {padding-bottom: 6px; font-size 14px;}
+
+/* GravityForms
+ ----------------------------------*/
+ #wrapper .gform_wrapper div.validation_error{
+ 	margin-top: 100px;
+ 	background-color: #ecc;
+ 	padding: 64px 0;
+ }
