--- a/style.css
+++ b/style.css
@@ -377,8 +377,11 @@ text-decoration:none !important;
 
 /* GravityForms
  ----------------------------------*/
+ .sticky-header.sticky ~ #main a.gform_anchor{
+ 	padding-top: 100px;
+ 	display: block;
+ }
  #wrapper .gform_wrapper div.validation_error{
- 	margin-top: 200px;
  	background-color: #ecc;
  	padding: 64px 0;
  }
