Styling for topbar text links

--- a/lib/sass/_01.theme-mods.scss
+++ b/lib/sass/_01.theme-mods.scss
@@ -1,7 +1,9 @@
 /* Theme Modifications */
 
 #topbar{
-  border-bottom: 1px solid darken(#e5e5e5,15%);
+  /*border-bottom: 1px solid darken(#e5e5e5,15%);*/
+  background-color: #000;
+  color: #fff;
 
   .avada-row{
     height: 36px;
@@ -28,15 +30,46 @@
     li{
       float: none;
       height: auto;
+      margin-left: 10px;
 
       @media (max-width : 600px) {
         margin-left: 5px;
       }
 
       a{
-        width: 24px;
-        height: 24px;
+        width: 22px;
+        height: 22px;
         background-position: center !important;
+        background-size: 100%;
+        background-color: #fff;
+        border-radius: 2px;
+      }
+
+      &.facebook a{
+        background-image: url(../images/facebook-dark@2x.png) !important;
+      }
+      &.linkedin a{
+        background-image: url(../images/linkedin-dark@2x.png) !important;
+      }
+
+      &.link{
+        a{
+          width: auto;
+          height: auto;
+          display: inline;
+          text-indent: 0;
+          padding-top: 3px;
+          color: #fff;
+          background-color: transparent;
+          font-weight: bold;
+          border: 1px solid darken(#fff,20%);
+          border-radius: 2px;
+          padding: 0 12px;
+
+          &:hover{
+            color: #4079C0;
+          }
+        }
       }
     }
   }
