--- a/lib/sass/main.scss
+++ b/lib/sass/main.scss
@@ -1,3 +1,7 @@
+@import "_00.variables";
 @import "_00.parent-styles";
 @import "_01.dynamic-css";
 @import "_02.theme-mods";
+@import "_03.flexbox-grid";
+@import "_04.home";
+@import "_05.plugins";
