--- a/lib/sass/_05.plugins.scss
+++ b/lib/sass/_05.plugins.scss
@@ -2,3 +2,42 @@
 .tribe-events-event-image{
   display: none;
 }
+
+/* Members Directory */
+.member-directory{
+  #main{
+    padding-top: 20px !important;
+  }
+
+  h2.page-title{
+    display: block;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #9f9f9f;
+  }
+
+  .page-title-container{
+    display: none;
+  }
+}
+#member-list{
+  .col-md{
+    margin-left: 20px;
+  }
+
+  td.bold{
+    font-weight: bold;
+  }
+
+  td.details-control{
+    background-image: url(../../images/open-close.png);
+    background-repeat: no-repeat;
+    background-size: 40px 80px;
+
+    &:hover{
+      cursor: pointer;
+    }
+  }
+  tr.shown td.details-control{
+    background-position: 0 -40px;
+  }
+}
