--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: ETEC Custom
 Description: Custom theme based on Avada Theme
-Author: Boondock Marketing
+Author: Boondock Marketing and WenderHost
 Template: Avada
 */
 
